# go-gitee

./: BUILD.bazel  README.en.md  README.md  WORKSPACE  api_issues.go  api_miscellaneous.go  api_search.go  api_webhooks.go  build.sh  go.mod  go.sum  model_blob.go  model_code.go  model_code_forks.go  model_commit.go  model_complete_branch.go  model_content.go  model_content_basic.go  model_contributor.go  model_event.go  model_issue.go  model_label.go  model_namespace.go  model_operate_log.go  model_project.go  model_pull_request_comments.go  model_pull_request_files.go  model_release.go  model_repo_commit.go  model_ssh_key.go  model_tag.go  model_tree.go  model_user.go  model_user_basic.go  model_user_notification_subject.go
api/: swagger.yaml
docs/: ActivityApi.md  BasicInfo.md  Blob.md  Branch.md  BranchCommit.md  BranchProtectionPutParam.md  Code.md  CodeComment.md  CodeForks.md  CodeForksHistory.md  Commit.md  CommitContent.md  CommitTree.md  Compare.md  CompleteBranch.md  Content.md  ContentBasic.md  Contributor.md  CreateBranchParam.md  CreatePullRequestParam.md  Email.md  EmailsApi.md  EnterpriseBasic.md  EnterpriseMember.md  EnterprisesApi.md  Event.md  GistsApi.md  GitCommit.md  GitDataApi.md  GitUser.md  Group.md  GroupDetail.md  GroupMember.md  Hook.md  Issue.md  IssueCommentPatchParam.md  IssueCommentPostParam.md  IssueCreateParam.md  IssueUpdateParam.md  IssuesApi.md  (+59 more)
gitee/: BUILD.bazel  api_activity.go  api_enterprises.go  api_gists.go  api_git_data.go  api_issues.go  api_labels.go  api_milestones.go  api_organizations.go  api_pull_requests.go  api_repositories.go  api_users.go  api_webhooks.go  client.go  converter.go  hook_commithook_accessors.go  hook_event_helper.go  hook_event_models.go  hook_event_types.go  hook_events.go  hook_issueevent_accessors.go  hook_issuehook_accessors.go  hook_labelhook_accessors.go  hook_milestonehook_accessors.go  hook_noteevent_accessors.go  hook_notehook_accessors.go  hook_projecthook_accessors.go  hook_pullrequest_accessors.go  hook_pullrequestevent_accessors.go  hook_pullrequesthook_accessors.go  hook_pushevent_accessors.go  hook_userhook_accessors.go  model_branch.go  model_branch_commit.go  model_code_comment.go  model_code_forks_history.go  model_commit.go  model_commit_content.go  model_compare.go  model_complete_branch.go  (+38 more)
test/: BUILD.bazel  api_test.go
