load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api_activity.go",
        "api_emails.go",
        "api_enterprises.go",
        "api_gists.go",
        "api_git_data.go",
        "api_issues.go",
        "api_labels.go",
        "api_milestones.go",
        "api_miscellaneous.go",
        "api_organizations.go",
        "api_pull_requests.go",
        "api_repositories.go",
        "api_search.go",
        "api_users.go",
        "api_webhooks.go",
        "client.go",
        "configuration.go",
        "converter.go",
        "hook_branchhook_accessors.go",
        "hook_commithook_accessors.go",
        "hook_enterprisehook_accessors.go",
        "hook_event_helper.go",
        "hook_event_models.go",
        "hook_event_types.go",
        "hook_events.go",
        "hook_issueevent_accessors.go",
        "hook_issuehook_accessors.go",
        "hook_labelhook_accessors.go",
        "hook_milestonehook_accessors.go",
        "hook_noteevent_accessors.go",
        "hook_notehook_accessors.go",
        "hook_projecthook_accessors.go",
        "hook_pullrequestevent_accessors.go",
        "hook_pullrequesthook_accessors.go",
        "hook_pushevent_accessors.go",
        "hook_userhook_accessors.go",
        "messages.go",
        "model_basic_info.go",
        "model_blob.go",
        "model_branch.go",
        "model_branch_commit.go",
        "model_branch_protection_put_param.go",
        "model_code.go",
        "model_code_comment.go",
        "model_code_forks.go",
        "model_code_forks_history.go",
        "model_commit.go",
        "model_commit_content.go",
        "model_commit_tree.go",
        "model_compare.go",
        "model_complete_branch.go",
        "model_content.go",
        "model_content_basic.go",
        "model_contributor.go",
        "model_create_branch_param.go",
        "model_create_pull_request_param.go",
        "model_email.go",
        "model_enterprise_basic.go",
        "model_enterprise_member.go",
        "model_event.go",
        "model_git_commit.go",
        "model_git_user.go",
        "model_group.go",
        "model_group_detail.go",
        "model_group_member.go",
        "model_hook.go",
        "model_issue.go",
        "model_issue_comment_patch_param.go",
        "model_issue_comment_post_param.go",
        "model_issue_create_param.go",
        "model_issue_update_param.go",
        "model_label.go",
        "model_label_post_param.go",
        "model_milestone.go",
        "model_namespace.go",
        "model_namespace_mini.go",
        "model_new_file_param.go",
        "model_note.go",
        "model_operate_log.go",
        "model_program_basic.go",
        "model_project.go",
        "model_project_basic.go",
        "model_project_label.go",
        "model_project_member.go",
        "model_project_member_permission.go",
        "model_project_member_permission_detail.go",
        "model_project_member_put_param.go",
        "model_pull_request.go",
        "model_pull_request_assignee_post_param.go",
        "model_pull_request_comment_patch_param.go",
        "model_pull_request_comment_post_param.go",
        "model_pull_request_comments.go",
        "model_pull_request_commits.go",
        "model_pull_request_file_path.go",
        "model_pull_request_files.go",
        "model_pull_request_label_post_param.go",
        "model_pull_request_merge_put_param.go",
        "model_pull_request_update_param.go",
        "model_release.go",
        "model_repo_commit.go",
        "model_repo_patch_param.go",
        "model_repository_post_param.go",
        "model_set_repo_reviewer.go",
        "model_single_commit.go",
        "model_ssh_key.go",
        "model_ssh_key_basic.go",
        "model_tag.go",
        "model_tree.go",
        "model_tree_basic.go",
        "model_user.go",
        "model_user_basic.go",
        "model_user_message.go",
        "model_user_message_list.go",
        "model_user_mini.go",
        "model_user_notification.go",
        "model_user_notification_count.go",
        "model_user_notification_list.go",
        "model_user_notification_namespace.go",
        "model_user_notification_subject.go",
        "model_week_report.go",
        "models_accessors.go",
        "response.go",
    ],
    importpath = "github.com/opensourceways/go-gitee/gitee",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_antihax_optional//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
